# mistral-v0.2-jax

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  convert_mistral_weight_to_hf.py  generate.py  mypy.ini  problems.md  pyproject.toml  requirements.txt  run_convert_params.py  run_test.py  temp_0.py  train.py
.github/workflows/: publish.yml
docs/: conf.py  index.rst  mistral.lib.array_conversion.rst  mistral.lib.collate_fn.rst  mistral.lib.einshard.rst  mistral.lib.example_data.rst  mistral.lib.generate.rst  mistral.model.attention.rst  mistral.model.decoder.rst  mistral.model.decoder_block.rst  mistral.model.embedding.rst  mistral.model.mistral_lm.rst  mistral.model.mistral_model.rst  mistral.model.mlp_layer.rst  mistral.model.rms_norm.rst  mistral.model.rotary_embedding.rst  mistral_v0_2.lib.array_conversion.rst  mistral_v0_2.lib.collate_fn.rst  mistral_v0_2.lib.example_data.rst  mistral_v0_2.lib.generate.rst  mistral_v0_2.model.attention.rst  mistral_v0_2.model.decoder.rst  mistral_v0_2.model.decoder_block.rst  mistral_v0_2.model.embedding.rst  mistral_v0_2.model.mistral_lm.rst  mistral_v0_2.model.mistral_model.rst  mistral_v0_2.model.mlp_layer.rst  mistral_v0_2.model.rms_norm.rst  mistral_v0_2.model.rotary_embedding.rst  requirements.txt
docs/_static/: custom.css
mistral/lib/: __init__.py  array_conversion.py  collate_fn.py  einshard.py  example_data.py  generate.py
mistral/model/: __init__.py  attention.py  decoder.py  decoder_block.py  embedding.py  mistral_lm.py  mistral_model.py  mlp_layer.py  rms_norm.py  rotary_embedding.py
mistral_v0_2/lib/: __init__.py  (+2 more)
tests/: test_einshard.py
(+12 files in other folders)
